--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/mattyb1980/Bamazon-Marketplace#readme",
   "dependencies": {
     "colors": "^1.1.2",
+    "columnify": "^1.5.4",
     "easy-table": "^1.1.0",
     "inquirer": "^3.3.0",
     "mysql": "^2.14.1"
